Stop the header line break on project edit page

--- a/app/assets/stylesheets/_edit.scss
+++ b/app/assets/stylesheets/_edit.scss
@@ -1,7 +1,7 @@
 body.projects-edit, body.projects-new, body.projects-create  {
-  .top-bar, .main > .columns {
-    max-width: 57em;
-  }
+  // .top-bar, .main > .columns {
+  //   max-width: 57em;
+  // }
 }
 form.edit_project, form.new_project {
   input#project_image {
